set default colours instead of null

--- a/excel/bus/operators/bus-operators.css
+++ b/excel/bus/operators/bus-operators.css
@@ -44,9 +44,9 @@
 --coles-coaches-odd: #0c539b;
 --coles-coaches-even: #0c4987;
 --coles-coaches-text: #f9f9f9;
---corryong-bus-freight-odd: #null;
---corryong-bus-freight-even: #null;
---corryong-bus-freight-text: #f9f9f9;
+--corryong-bus-freight-odd: #d7832c;
+--corryong-bus-freight-even: #c47625;
+--corryong-bus-freight-text: #1e1e1e;
 --cranbourne-transit-odd: #cea812;
 --cranbourne-transit-even: #bc9a12;
 --cranbourne-transit-text: #0b0b0b;
@@ -122,9 +122,9 @@
 --littles-coaches-daylesford-odd: #711c2b;
 --littles-coaches-daylesford-even: #5e1824;
 --littles-coaches-daylesford-text: #f9f9f9;
---mallacoota-explorer-tours-odd: #null;
---mallacoota-explorer-tours-even: #null;
---mallacoota-explorer-tours-text: #f9f9f9;
+--mallacoota-explorer-tours-odd: #d7832c;
+--mallacoota-explorer-tours-even: #c47625;
+--mallacoota-explorer-tours-text: #1e1e1e;
 --martin-s-albury-odd: #86733a;
 --martin-s-albury-even: #7a6831;
 --martin-s-albury-text: #fdfdfd;
@@ -173,9 +173,9 @@
 --trotters-coaches-odd: #28ab0e;
 --trotters-coaches-even: #23910d;
 --trotters-coaches-text: #020202;
---dean-jardine-odd: #null;
---dean-jardine-even: #null;
---dean-jardine-text: #f9f9f9;
+--dean-jardine-odd: #d7832c;
+--dean-jardine-even: #c47625;
+--dean-jardine-text: #1e1e1e;
 --ventura-bus-lines-odd: #14315b;
 --ventura-bus-lines-even: #0c1d36;
 --ventura-bus-lines-text: #f9f9f9;
@@ -200,9 +200,9 @@
 --wimmera-roadways-odd: #09633e;
 --wimmera-roadways-even: #03452a;
 --wimmera-roadways-text: #f9f9f9;
---yarrawonga-mulwala-taxis-odd: #null;
---yarrawonga-mulwala-taxis-even: #null;
---yarrawonga-mulwala-taxis-text: #f9f9f9;
+--yarrawonga-mulwala-taxis-odd: #d7832c;
+--yarrawonga-mulwala-taxis-even: #c47625;
+--yarrawonga-mulwala-taxis-text: #1e1e1e;
 --zaffina-bus-lines-odd: #07b50f;
 --zaffina-bus-lines-even: #07960e;
 --zaffina-bus-lines-text: #020202;
